--- a/app/less/style.less
+++ b/app/less/style.less
@@ -7,23 +7,19 @@
 	left: 0px;
 	width: 100%;
 	height: 80px;
-	float: left;
-	display: block;
-	z-index: -1;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 
 	a.btn-icon {
-		float: left;
-		display: block;
 		font-size: 1.8em;
 		width: 80px;
-		height: 40px;
-		padding: 20px 0;
-		text-align: center;
+		height: 80px;
 		color: #666666;
-
-		&.right {
-			float: right;
-		}
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		text-decoration: none;
 
 		&:hover {
 			color: #000000;
@@ -31,12 +27,13 @@
 	}
 
 	a.logo-icon {
-		float: left;
-		display: block;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 
 		img {
 			height: 60px;
-		padding: 10px;
+			padding: 10px;
 		}
 	}
 }
@@ -299,20 +296,6 @@
 		}
 	}
 }
-
-.logout{
-	width: 100%;
-	margin-top: 28%;
-	float: left;
-	display: block;
-	text-align: center;
-	font-size: 1.2em;
-	color: @primary_color;
-	line-height: 1em;
-
-	i{ margin-left: 5px; }
-}
-
 .login{
 	width: 100%;
 	display: flex;
@@ -328,6 +311,14 @@
 		width: 28%;
 		margin: 0 36%;
 		text-align: center;
+
+		&.logout {
+			font-size: 1.4em;
+
+			i {
+				margin-right: 10px;
+			}
+		}
 
 		.logo{
 			width: 30%;
@@ -881,17 +872,18 @@
 }
 
 .footer{
-	width: 40%;
-	padding: 3% 30%;
-	float: left;
-	display: block;
+	width: 60%;
+	margin: 0 20%;
+	margin-bottom: 5%;
 	color: #666666;
 	font-size: 1em;
-	text-align: center;
 	font-style: italic;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 
-	i{
-		margin-right: 5px;
+	i {
+		margin-right: 10px;
 	}
 }
 
